<ui version="4.0" >
 <class>SvnMoveOptionDlg</class>
 <widget class="QWidget" name="SvnMoveOptionDlg" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>469</width>
    <height>339</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" >
   <item>
    <widget class="QLabel" name="label_3" >
     <property name="sizePolicy" >
      <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text" >
      <string>Requested local path:</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="reqEdit" >
     <property name="text" >
      <string/>
     </property>
     <property name="readOnly" >
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_4" >
     <property name="title" >
      <string>Source</string>
     </property>
     <layout class="QVBoxLayout" >
      <item>
       <widget class="QRadioButton" name="urlRadio" >
        <property name="text" >
         <string>Specify by repository URL</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="pathRadio" >
        <property name="text" >
         <string>Specify by local working copy</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="srcEdit" />
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_3" >
     <property name="title" >
      <string>Destination</string>
     </property>
     <layout class="QVBoxLayout" >
      <item>
       <widget class="QLabel" name="label_2" >
        <property name="sizePolicy" >
         <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text" >
         <string>Specify either the full repository URL or local working path</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="KUrlRequester" name="destEdit" />
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="forceChk" >
     <property name="text" >
      <string>Forcefully delete locally modified and/or unversioned items</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QLineEdit</class>
   <extends>QLineEdit</extends>
   <header>klineedit.h</header>
  </customwidget>
  <customwidget>
   <class>KUrlRequester</class>
   <extends>QFrame</extends>
   <header>kurlrequester.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
